--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.3.1.RELEASE</version>
+		<relativePath/>
+	</parent>
+
 	<groupId>pl.piomin.samples</groupId>
 	<artifactId>sample-spring-amqp</artifactId>
 	<packaging>pom</packaging>
@@ -13,5 +20,10 @@
 		<module>producer</module>
 	</modules>
 
+	<properties>
+		<sonar.projectKey>piomin_sample-spring-amqp</sonar.projectKey>
+		<sonar.organization>piomin</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
 
 </project>
