--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: Analyze on SonarCloud
-          command: mvn verify sonar:sonar
+          command: mvn verify sonar:sonar -DskipTests
 
 executors:
   j11:
@@ -17,11 +17,15 @@ executors:
 
 orbs:
   maven: circleci/maven@1.4.0
+  tcc: atomicjar/testcontainers-cloud-orb@0.1.0
 
 workflows:
   maven_test:
     jobs:
       - maven/test:
           executor: j11
+          context: Testcontainers
+          pre-steps:
+            - tcc/setup
       - build:
           context: SonarCloud
